--- a/styles/userprofileprofile.css
+++ b/styles/userprofileprofile.css
@@ -1,96 +1,100 @@
 :root {
-    --primary-color: #f45ea0;
-    --second-color: #b555a1;
-    --third-color: #9051a2;
-    --fourth-color: #674ba2;
-    --fifth-color: #4b48a3;
-    --six-color: #2943a3;
+  --primary-color: #f45ea0;
+  --second-color: #b555a1;
+  --third-color: #9051a2;
+  --fourth-color: #674ba2;
+  --fifth-color: #4b48a3;
+  --six-color: #2943a3;
+}
+
+body {
+  background-color: var(--primary-color);
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Adelle Mono", Flex-Bold;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Adelle Mono", Flex-Bold;
 }
 
 .container {
-    width: 100%;
-    height: 100vh;
-    background-color: var(--primary-color);
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--primary-color);
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .profile-box {
-    background: var(--third-color);
-    text-align: center;
-    padding: 40px 130px;
-    color: #fff;
-    position: relative;
-    border-radius: 20px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3)
+  background: var(--third-color);
+  text-align: center;
+  padding: 40px 130px;
+  color: #fff;
+  position: relative;
+  border-radius: 20px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .menu-icon {
-    width: 25px;
-    position: absolute;
-    left: 40px;
-    top: 40px;
+  width: 25px;
+  position: absolute;
+  left: 40px;
+  top: 40px;
 }
 
 .back-icon {
-    width: 25px;
-    position: absolute;
-    right: 40px;
-    top: 40px;
-    rotate: -90deg;
+  width: 25px;
+  position: absolute;
+  right: 40px;
+  top: 40px;
+  rotate: -90deg;
 }
 
 .profile-pic {
-    width: 150px;
-    border-radius: 50%;
-    background: var(--second-color);
-    padding: 6px;
-    margin-top: 40px;
+  width: 150px;
+  border-radius: 50%;
+  background: var(--second-color);
+  padding: 6px;
+  margin-top: 40px;
 }
 
 .profile-bottom {
-    background: #fff;
-    color: var(--six-color);
-    padding: 60px 0;
-    margin-right: -130px;
-    margin-left: -130px;
-    margin-bottom: -40px;
-    border-radius: 20px;
-    margin-top: -10px;
+  background: #fff;
+  color: var(--six-color);
+  padding: 60px 0;
+  margin-right: -130px;
+  margin-left: -130px;
+  margin-bottom: -40px;
+  border-radius: 20px;
+  margin-top: -10px;
 }
 
 .profile-bottom img {
-    width: 15px;
-    margin-top: 15px;
-    cursor: pointer;
+  width: 15px;
+  margin-top: 15px;
+  cursor: pointer;
 }
 
 .profile-box button {
-    background: #fff;
-    color: var(--six-color);
-    border: none;
-    outline: none;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-    padding: 15px 60px;
-    cursor: pointer;
-    border-radius: 30px;
-    margin-bottom: -50px;
-    font-weight: 600;
-    font-size: 16px;
+  background: #fff;
+  color: var(--six-color);
+  border: none;
+  outline: none;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  padding: 15px 60px;
+  cursor: pointer;
+  border-radius: 30px;
+  margin-bottom: -50px;
+  font-weight: 600;
+  font-size: 16px;
 }
 
 .profile-box h3 {
-    font-size: 24px;
-    font-weight: 800;
-    margin-bottom: 20px;
+  font-size: 24px;
+  font-weight: 800;
+  margin-bottom: 20px;
 }
