--- a/styles/coursepage.css
+++ b/styles/coursepage.css
@@ -28,58 +28,13 @@ h1 {
   padding: 20px;
 }
 
+h3 {
+  color: #fff;
+}
+
 video {
   width: 100%;
   height: auto;
-}
-
-/* Like Button */
-.like-content span {
-  color: #fff;
-  font-family: "Adelle Mono", Flex-Bold;
-}
-
-.like-content .btn-secondary {
-  display: block;
-  margin: 40px auto 0px;
-  text-align: center;
-  background: var(--fourth-color);
-  border-radius: 3px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-  padding: 10px 37px;
-  font-size: 18px;
-  cursor: pointer;
-  border: none;
-  outline: none;
-  color: #fff;
-  text-decoration: none;
-  -webkit-transition: 0.3s ease;
-  transition: 0.3s ease;
-}
-
-.like-content .btn-secondary:hover {
-  transform: translateY(-6px);
-}
-
-.like-content .btn-secondary .fa {
-  margin-right: 5px;
-}
-
-.animate-like {
-  animation-name: likeAnimation;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
-  animation-duration: 0.65s;
-}
-
-@keyframes likeAnimation {
-  0% {
-    transform: scale(30);
-  }
-
-  100% {
-    transform: scale(1);
-  }
 }
 
 .btn {
