--- a/styles/userprofileprofile.css
+++ b/styles/userprofileprofile.css
@@ -15,7 +15,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Adelle Mono", Flex-Bold;
+  font-family: "Adelle Mono", Light;
 }
 
 .container {
