--- a/styles/coursepage.css
+++ b/styles/coursepage.css
@@ -19,7 +19,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Adelle Mono", Flex-Bold;
+  font-family: "Adelle Mono", Light;
 }
 
 h1 {
