--- a/styles/style.css
+++ b/styles/style.css
@@ -1,103 +1,87 @@
 :root {
-    --primary-color: #f45ea0;
-    --second-color: #b555a1;
-    --third-color: #9051a2;
-    --fourth-color: #674ba2;
-    --fifth-color: #4b48a3;
-    --six-color: #2943a3;
+  --primary-color: #f45ea0;
+  --second-color: #b555a1;
+  --third-color: #9051a2;
+  --fourth-color: #674ba2;
+  --fifth-color: #4b48a3;
+  --six-color: #2943a3;
 }
 
 @font-face {
-    font-family: 'Adelle Mono', Flex-Bold;
-    src: url('../fonts/AdelleMonoFlex-Bold.eot?#iefix') format('embedded-op')
+  font-family: "Adelle Mono", Flex-Bold;
+  src: url("../fonts/AdelleMonoFlex-Bold.eot?#iefix") format("embedded-op");
 }
 
 html {
-    scroll-behavior: smooth;
-    overflow-x: hidden;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
-
 
 /*Screen size Iphone XR - 414 x 896*/
 @media only screen and (min-width: 414px) {
-    .header {
-        margin: 0px 0px 0px 0px;
-        display: grid;
-    }
+  .header {
+    margin: 0px 0px 0px 0px;
+    display: grid;
+  }
 
-    body {
-        background-color: var(--primary-color);
-        display: grid;
-        overflow-x: hidden;
-    }
+  body {
+    background-color: var(--primary-color);
+    display: grid;
+    overflow-x: hidden;
+  }
 
-    #title {
-        color: #ffffff;
-        font-family: 'Adelle Mono', Flex-Bold;
-        font-size: 40px;
-        margin: 15px 0px 0px 5px;
-    }
-    .dot {
-        height: 35px;
-        width: 35px;
-        background-color: #ffffff;
-        border-radius: 50%;
-        display: inline-block;
-        margin: 20px 7px 0px 15px;
-    }
+  #title {
+    color: #ffffff;
+    font-family: "Adelle Mono", Flex-Bold;
+    font-size: 40px;
+    margin: 15px 0px 0px 5px;
+  }
+  .dot {
+    height: 35px;
+    width: 35px;
+    background-color: #ffffff;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 20px 7px 0px 15px;
+  }
 
-    #menu {
-        width: 60%;
-        margin: 7px 0px 0px 6px;
-        display: block;
-    }
+  #menu {
+    width: 60%;
+    margin: 7px 0px 0px 6px;
+    display: block;
+  }
 
+  #logo_intro {
+    width: 50%;
+    margin: 0px 0px 0px 15px;
+  }
 
-    #logo_intro {
-        width: 50%;
-        margin: 0px 0px 0px 15px;
-    }
+  .nav {
+    height: 100%;
+    width: 80%;
+    z-index: 1;
+    top: 0;
+    background-color: var(--primary-color);
+    overflow-x: hidden;
+    padding: 60px;
+    transition: 0.7s;
+    margin: 0px 0px 0px 0px;
+  }
 
-    .nav {
-        height: 100%;
-        width: 80%;
-        z-index: 1;
-        top: 0;
-        background-color: var(--primary-color);
-        overflow-x: hidden;
-        padding: 60px;
-        transition: 0.7s;
-        margin: 0px 0px 0px 0px;
-    }
+  .nav a {
+    display: block;
+    padding: 20px 30px;
+    font-size: 25px;
+    text-decoration: none;
+    color: #ffffff;
+  }
 
-    .nav a{
-        display: block;
-        padding: 20px 30px;
-        font-size: 25px;
-        text-decoration: none;
-        color: #ffffff;
-    }
+  .nav a:hover {
+    color: #ffffff;
+    transition: 0.4s;
+  }
 
-    .nav a:hover {
-        color: #ffffff;
-        transition: 0.4s;
-    }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*
+  /*
 Alternativa
     #title_2 {
         color: #ffffff;
@@ -108,321 +92,309 @@ Alternativa
         margin: 0px 30px 0px 0px;
     }
 */
-    .title {
-        color: #ffffff;
-        font-family: 'Adelle Mono', Flex-Bold;
-        text-transform: uppercase;
-        line-height: 40px;
-        margin: 20px 0px 0px 200px;
+  .title {
+    color: #ffffff;
+    font-family: "Adelle Mono", Flex-Bold;
+    text-transform: uppercase;
+    line-height: 40px;
+    margin: 20px 0px 0px 200px;
+  }
+
+  .title-content {
+    font-family: "Adelle Mono", Flex-Bold;
+    display: block;
+    opacity: 0;
+    animation: revealText 0.8s forwards;
+  }
+
+  .title-second {
+    font-family: "Adelle Mono", Flex-Bold;
+    animation-delay: 0.2s;
+  }
+
+  .title-third {
+    font-family: "Adelle Mono", Flex-Bold;
+    animation-delay: 0.25s;
+  }
+
+  @keyframes revealText {
+    from {
+      transform: translateY(20px);
     }
-
-    .title-content {
-        font-family: 'Adelle Mono', Flex-Bold;
-        display: block;
-        opacity: 0;
-        animation: revealText .8s forwards;
+    to {
+      opacity: 1;
+      transform: none;
     }
+  }
 
-    .title-second {
-        font-family: 'Adelle Mono', Flex-Bold;
-        animation-delay: .200s;
+  .button,
+  .registNow {
+    font-family: "Adelle Mono", Flex-Bold;
+    background-color: #9051a2;
+    border: none;
+    color: white;
+    padding: 10px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 10px;
+    cursor: pointer;
+    margin: 20px 0px 0px 200px;
+  }
+
+  .button,
+  .logIn {
+    font-family: "Adelle Mono", Flex-Bold;
+    background-color: #9051a2;
+    border: none;
+    color: white;
+    padding: 10px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    white-space: nowrap;
+    font-size: 10px;
+    cursor: pointer;
+    margin: 20px 40px 0px 0px;
+  }
+
+  .btn:hover {
+    animation: pulsate 1s ease-in-out;
+  }
+
+  @keyframes pulsate {
+    0% {
+      box-shadow: 0 0 50px #4b48a3, 0 0 25px #f45ea0;
     }
-    
-    .title-third {
-        font-family: 'Adelle Mono', Flex-Bold;
-        animation-delay: .25s;
-    }
+  }
 
-    @keyframes revealText {
-        from {
-            transform: translateY(20px);
-        }
-        to {
-            opacity: 1;
-            transform: none;
-        }
-    }
+  #dot_cursos {
+    position: fixed;
+    height: 45px;
+    width: 45px;
+    background-color: #ffffff;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 40px 0px 0px 20px;
+  }
 
-    .button, .registNow{
-        font-family: 'Adelle Mono', Flex-Bold;
-        background-color: #9051a2;
-        border: none;
-        color: white;
-        padding: 10px 15px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 10px;
-        cursor: pointer;
-        margin: 20px 0px 0px 200px;
-    }
-    
-    .button, .logIn {
-        font-family: 'Adelle Mono', Flex-Bold;
-        background-color: #9051a2;
-        border: none;
-        color: white;
-        padding: 10px 15px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        white-space: nowrap;
-        font-size: 10px;
-        cursor: pointer;
-        margin: 20px 40px 0px 0px;
-    }
-    
-    .btn:hover {
-        animation: pulsate 1s ease-in-out;
-    }
-    
-    @keyframes pulsate {
-        0% {
-            box-shadow:
-            0 0 50px #4b48a3,
-            0 0 25px #f45ea0;
-        }
-    }
+  #cursos {
+    width: 80%;
+    margin: 7px 0px 0px 6px;
+    display: block;
+  }
 
-    #dot_cursos {
-        position: fixed;
-        height: 45px;
-        width: 45px;
-        background-color: #ffffff;
-        border-radius: 50%;
-        display: inline-block;
-        margin: 40px 0px 0px 20px;
-    }
+  #dot_perfil {
+    position: fixed;
+    height: 45px;
+    width: 45px;
+    background-color: #ffffff;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 40px 0px 0px 130px;
+  }
 
-    #cursos{
-        width: 80%;
-        margin: 7px 0px 0px 6px;
-        display: block;
-    }
+  #perfil {
+    width: 50%;
+    margin: 9px 0px 0px 11px;
+    display: block;
+  }
 
+  #who_color {
+    background-color: var(--second-color);
+  }
 
-    #dot_perfil {
-        position: fixed;
-        height: 45px;
-        width: 45px;
-        background-color: #ffffff;
-        border-radius: 50%;
-        display: inline-block;
-        margin: 40px 0px 0px 130px;
-    }
+  #who_title {
+    color: #ffffff;
+    font-family: "Adelle Mono", Flex-Bold;
+    font-size: 50px;
+    text-align: center;
+    margin: 180px 0px 0px 0px;
+  }
 
-    #perfil {
-        width: 50%;
-        margin: 9px 0px 0px 11px;
-        display: block;
-    }
+  p {
+    color: white;
+    text-align: center;
+    margin: 0px 100px 0px 0px;
+  }
 
-    #who_color {
-        background-color: var(--second-color);
-    }
+  .card_lucas {
+    width: 250px;
+    height: 250px;
+    color: #ffffff;
+    background: url("./img/Lucas.png") center no-repeat;
+    background-size: cover;
+    border-radius: 20px;
+    overflow: hidden;
+    margin: 50px 0px 0px 0px;
+  }
 
-    #who_title {
-        color: #ffffff;
-        font-family: 'Adelle Mono', Flex-Bold;
-        font-size: 50px;
-        text-align: center;
-        margin: 180px 0px 0px 0px;
-    }
+  .card_nuno {
+    width: 250px;
+    height: 250px;
+    color: #ffffff;
+    background: url("./img/n.jpg") center no-repeat;
+    background-size: cover;
+    border-radius: 20px;
+    overflow: hidden;
+    margin: 50px 0px 0px 0px;
+  }
 
-    p {
-        color: white;
-        text-align: center;
-        margin: 0px 100px 0px 0px;
-    }
+  .card {
+    width: 250px;
+    height: 250px;
+    color: #ffffff;
+    background: url("./n.jpg") center no-repeat;
+    background-size: cover;
+    border-radius: 20px;
+    overflow: hidden;
+    margin: 50px 0px 0px 0px;
+  }
 
-    .card_lucas {
-        width: 250px;
-        height: 250px;
-        color: #ffffff;
-        background: url('./img/Lucas.png') center no-repeat;
-        background-size: cover;
-        border-radius: 20px;
-        overflow: hidden;
-        margin: 50px 0px 0px 0px;
-    }
+  #about_target {
+    color: white;
+    font-family: "Adelle Mono", Flex-Bold;
+    font-size: 20px;
+    text-align: center;
+    margin: 80px 0px 0px 0px;
+  }
 
-    .card_nuno {
-        width: 250px;
-        height: 250px;
-        color: #ffffff;
-        background: url('./img/n.jpg') center no-repeat;
-        background-size: cover;
-        border-radius: 20px;
-        overflow: hidden;
-        margin: 50px 0px 0px 0px;
-    }
+  #about_color {
+    background-color: #9051a2;
+  }
 
-    .card {
-        width: 250px;
-        height: 250px;
-        color: #ffffff;
-        background: url('./n.jpg') center no-repeat;
-        background-size: cover;
-        border-radius: 20px;
-        overflow: hidden;
-        margin: 50px 0px 0px 0px;
-    }
+  #about_title {
+    color: white;
+    font-family: "Adelle Mono", Flex-Bold;
+    font-size: 50px;
+    text-align: center;
+    margin: 40px 0px 0px 0px;
+  }
 
+  #important {
+    font-family: "Adelle Mono", Flex-Bold;
+    text-align: center;
+    color: #ffffff;
+    font-size: 30px;
+    margin: 80px 0px 0px 0px;
+  }
 
-    #about_target {
-        color: white;
-        font-family: 'Adelle Mono', Flex-Bold;
-        font-size: 20px;
-        text-align: center;
-        margin: 80px 0px 0px 0px;
-    }
-    
-    #about_color{
-        background-color: #9051a2;
-    }
+  #missing {
+    font-family: "Adelle Mono", Flex-Bold;
+    text-align: center;
+    color: #ffffff;
+    font-size: 30px;
+    margin: 80px 0px 0px 0px;
+  }
 
+  #methods_target {
+    font-family: "Adelle Mono", Flex-Bold;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    margin: 80px 0px 0px 0px;
+  }
 
-    #about_title {
-        color: white;
-        font-family: 'Adelle Mono', Flex-Bold;
-        font-size: 50px;
-        text-align: center;
-        margin: 40px 0px 0px 0px;
-    }
+  #methods_color {
+    background-color: #674ba2;
+  }
 
-    #important {
-        font-family: 'Adelle Mono', Flex-Bold;
-        text-align: center;
-        color: #ffffff;
-        font-size: 30px;
-        margin: 80px 0px 0px 0px;
-    }
+  #methods_title {
+    font-family: "Adelle Mono", Flex-Bold;
+    color: white;
+    font-size: 50px;
+    text-align: center;
+    margin: 80px 0px 0px 0px;
+  }
 
-    #missing {
-        font-family: 'Adelle Mono', Flex-Bold;
-        text-align: center;
-        color: #ffffff;
-        font-size: 30px;
-        margin: 80px 0px 0px 0px;
-    }
-    
-    #methods_target {
-        font-family: 'Adelle Mono', Flex-Bold;
-        color: white;
-        font-size: 20px;
-        text-align: center;
-        margin: 80px 0px 0px 0px;
-    }
+  /*Video PLayer*/
 
-    #methods_color {
-        background-color: #674ba2;
-    }
+  #videos_title {
+    font-family: "Adelle Mono", Flex-Bold;
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    margin: 80px 0px 0px 0px;
+  }
 
+  #practice_title {
+    font-family: "Adelle Mono", Flex-Bold;
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    margin: 80px 0px 0px 0px;
+  }
 
-    #methods_title {
-        font-family: 'Adelle Mono', Flex-Bold;
-        color: white;
-        font-size: 50px;
-        text-align: center;
-        margin: 80px 0px 0px 0px;
-    }
+  #learn {
+    font-family: "Adelle Mono", Flex-Bold;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    margin: 80px 0px 0px 0px;
+  }
 
-/*Video PLayer*/
+  #courses_title {
+    font-family: "Adelle Mono", Flex-Bold;
+    color: white;
+    font-size: 40px;
+    text-align: center;
+    margin: 80px 0px 0px 0px;
+  }
 
+  h2 {
+    font-family: "Adelle Mono", Flex-Bold;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    margin: 80px 0px 0px 0px;
+  }
 
+  #courses_target {
+    font-family: "Adelle Mono", Flex-Bold;
+    color: white;
+    font-size: 25px;
+    text-align: center;
+    margin: 80px 0px 0px 0px;
+  }
 
+  #courses_color {
+    background-color: #4b48a3;
+  }
 
+  #courses_title {
+    font-family: "Adelle Mono", Flex-Bold;
+    color: white;
+    font-size: 50px;
+    text-align: center;
+    margin: 80px 0px 0px 0px;
+  }
 
+  .courses_target {
+    font-family: "Adelle Mono", Flex-Bold;
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    margin: 80px 0px 0px 0px;
+  }
 
+  #dot_up {
+    height: 45px;
+    width: 45px;
+    background-color: #ffffff;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 80px 0px 60px 350px;
+  }
 
-    #videos_title{
-        font-family: 'Adelle Mono', Flex-Bold;
-        color: white;
-        font-size: 30px;
-        text-align: center;
-        margin: 80px 0px 0px 0px;
-    }
-
-    #practice_title {
-        font-family: 'Adelle Mono', Flex-Bold;
-        color: white;
-        font-size: 30px;
-        text-align: center;
-        margin: 80px 0px 0px 0px;
-    }
-
-    #learn {
-        font-family: 'Adelle Mono', Flex-Bold;
-        color: white;
-        font-size: 20px;
-        text-align: center;
-        margin: 80px 0px 0px 0px;
-    }
-
-    #courses_title {
-        font-family: 'Adelle Mono', Flex-Bold;
-        color: white;
-        font-size: 40px;
-        text-align: center;
-        margin: 80px 0px 0px 0px;
-    }
-
-    h2{
-        font-family: 'Adelle Mono', Flex-Bold;
-        color: white;
-        font-size: 20px;
-        text-align: center;
-        margin: 80px 0px 0px 0px;
-    }
-
-    #courses_target {
-        font-family: 'Adelle Mono', Flex-Bold;
-        color: white;
-        font-size: 25px;
-        text-align: center;
-        margin: 80px 0px 0px 0px;
-    }
-
-    #courses_color {
-        background-color: #4b48a3
-    }
-
-    #courses_title {
-        font-family: 'Adelle Mono', Flex-Bold;
-        color: white;
-        font-size: 50px;
-        text-align: center;
-        margin: 80px 0px 0px 0px;
-    }
-
-
-    .courses_target {
-        font-family: 'Adelle Mono', Flex-Bold;
-        color: white;
-        font-size: 30px;
-        text-align: center;
-        margin: 80px 0px 0px 0px;
-    }
-
-    #dot_up {
-        height: 45px;
-        width: 45px;
-        background-color: #ffffff;
-        border-radius: 50%;
-        display: inline-block;
-        margin: 80px 0px 60px 350px;
-    }
-
-    #go_up {
-        width: 60%;
-        margin: 10px 0px 0px 9px;
-        display: block;
-    }
-
+  #go_up {
+    width: 60%;
+    margin: 10px 0px 0px 9px;
+    display: block;
+  }
 }
 
 @media screen and (min-width: 992px) {
-    body {
-        background-color: var(--primary-color);
-    }
+  body {
+    background-color: var(--primary-color);
+  }
 }
