--- a/styles/style.css
+++ b/styles/style.css
@@ -152,38 +152,6 @@ html {
         }
     }
 
-    #dot_cursos {
-        position: fixed;
-        height: 45px;
-        width: 45px;
-        background-color: #ffffff;
-        border-radius: 50%;
-        display: inline-block;
-        margin: 40px 0px 0px 20px;
-    }
-
-    #cursos{
-        width: 80%;
-        margin: 7px 0px 0px 6px;
-        display: block;
-    }
-
-
-    #dot_perfil {
-        position: fixed;
-        height: 45px;
-        width: 45px;
-        background-color: #ffffff;
-        border-radius: 50%;
-        display: inline-block;
-        margin: 40px 0px 0px 130px;
-    }
-
-    #perfil {
-        width: 50%;
-        margin: 9px 0px 0px 11px;
-        display: block;
-    }
 
     #who_color {
         background-color: var(--second-color);
@@ -207,7 +175,7 @@ html {
         width: 250px;
         height: 250px;
         color: #ffffff;
-        background: url('../imgs/Lucas.png') center no-repeat;
+        background: url('../imgs/main/Lucas.png') center no-repeat;
         background-size: cover;
         border-radius: 20px;
         overflow: hidden;
@@ -218,18 +186,18 @@ html {
         width: 250px;
         height: 250px;
         color: #ffffff;
-        background: url('../imgs/n.jpg') center no-repeat;
+        background: url('../imgs/main/n.jpg') center no-repeat;
         background-size: cover;
         border-radius: 20px;
         overflow: hidden;
         margin: 50px 0px 0px 0px;
     }
 
-    .card {
+    .card_tiago {
         width: 250px;
         height: 250px;
         color: #ffffff;
-        background: url('../imgs/tiago.png') center no-repeat;
+        background: url('../imgs/main/tiago.png') center no-repeat;
         background-size: cover;
         border-radius: 20px;
         overflow: hidden;
@@ -303,14 +271,6 @@ html {
         text-align: center;
         margin: 80px 0px 0px 0px;
     }
-
-/*Video PLayer*/
-
-
-
-
-
-
 
     #videos_title{
         font-family: 'Adelle Mono', Flex-Bold;
@@ -396,10 +356,470 @@ html {
         display: block;
     }
 
+
+    .card_course {
+        position: relative;
+        width: 250px;
+        height: 250px;
+        margin: 0px 0px 0px 700px;
+        background:
+            linear-gradient(43deg, #f45ea0 0%, #9051a2 46%, #4b48a3 100%);
+        background-size: cover;
+        border-radius: 20px;
+        overflow: hidden;
+    }
+
+    .card_content_course {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height:80%;
+        padding: 20px;
+        background-color: #ffff;
+        border-top-left-radius: 20px;
+        transform: translateY(190px);
+        transition: transform .25s;
+    }
+
+    .card_content_course::before {
+        content: "";
+        position: absolute;
+        top: -47px;
+        right: -45px;
+        width: 100px;
+        height: 100px;
+        transform: rotate(-175deg);
+        border-radius: 50%;
+        box-shadow: inset 48px 48px #fff;
+    }
+
+    .card_title_course {
+        color: #2943a3;
+        line-height:15px;
+        font-size: 40px;
+    }
+
+    .card_description_course {
+        font-size: 14px;
+        opacity: 0;
+        transition: opacity .5s;
+    }
+
+    .card_course:hover .card_content_course {
+        transform: translateY(0);
+    }
+
+    .card_course:hover .card_description_course {
+        opacity: 1;
+        transition-delay: .25s;
+    }
+
+
+
 }
 
+/* 992 PX*/
+
 @media screen and (min-width: 992px) {
+    a {
+        text-decoration: none;
+    }
+    
     body {
         background-color: var(--primary-color);
+        display: grid;
+        overflow-x: hidden;
     }
+
+    #title {
+        color: #ffffff;
+        font-family: 'Adelle Mono', Flex-Bold;
+        font-size: 60px;
+        margin: 25px 0px 0px 5px;
+    }
+    .dot {
+        height: 35px;
+        width: 35px;
+        background-color: #ffffff;
+        border-radius: 50%;
+        display: inline-block;
+        margin: 10px 10px 0px 0px;
+    }
+
+    #menu {
+        width: 150%;
+        margin: 10px 0px 0px 0px;
+    }
+
+    .dot_close {
+        height: 35px;
+        width: 35px;
+        background-color: #ffffff;
+        border-radius: 50%;
+        display: inline-block;
+        margin: 10px 15px 0px 0px;
+    }
+
+    #logo_intro {
+        width: 40%;
+        margin: 0px 0px 0px 15px;
+    }
+
+    /*MENU OPEN AND CLOSE*/
+   
+
+    .title {
+        color: #ffffff;
+        font-family: 'Adelle Mono', Flex-Bold;
+        text-transform: uppercase;
+        line-height: 100px;
+        margin: 0px 0px 20px 900px;
+    }
+
+    .title-content {
+        font-family: 'Adelle Mono', Flex-Bold;
+        display: block;
+        opacity: 0;
+        animation: revealText .8s forwards;
+        font-size: 80px;
+    }
+
+    .title-second {
+        font-family: 'Adelle Mono', Flex-Bold;
+        animation-delay: .200s;
+        font-size: 80px;
+    }
+    
+    .title-third {
+        font-family: 'Adelle Mono', Flex-Bold;
+        animation-delay: .25s;
+        font-size: 80px;
+    }
+
+    @keyframes revealText {
+        from {
+            transform: translateY(20px);
+        }
+        to {
+            opacity: 1;
+            transform: none;
+        }
+    }
+
+    .button, .registNow{
+        font-family: 'Adelle Mono', Flex-Bold;
+        background-color: #9051a2;
+        border: none;
+        color: white;
+        padding: 10px 15px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 30px;
+        cursor: pointer;
+        margin: 20px 0px 0px 1000px;
+    }
+    
+    .button, .logIn {
+        font-family: 'Adelle Mono', Flex-Bold;
+        background-color: #9051a2;
+        border: none;
+        color: white;
+        padding: 10px 15px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        white-space: nowrap;
+        font-size: 30px;
+        cursor: pointer;
+        margin: 20px 40px 0px 0px;
+    }
+    
+    .btn:hover {
+        animation: pulsate 1s ease-in-out;
+    }
+    
+    @keyframes pulsate {
+        0% {
+            box-shadow:
+            0 0 50px #4b48a3,
+            0 0 25px #f45ea0;
+        }
+    }
+
+    #who_color {
+        background-color: var(--second-color);
+    }
+
+    #who_title {
+        color: #ffffff;
+        font-family: 'Adelle Mono', Flex-Bold;
+        font-size: 100px;
+        text-align: center;
+        margin: 180px 0px 0px 0px;
+    }
+
+    p {
+        color: white;
+        text-align: center;
+        margin: 0px 0px 0px 0px;
+        font-size: 40px;
+        padding: 0px 200px 0px 200px;
+    }
+
+    .card_lucas {
+        width: 450px;
+        height: 450px;
+        color: #ffffff;
+        background: url('../imgs/Lucas.png') center no-repeat;
+        background-size: cover;
+        border-radius: 20px;
+        overflow: hidden;
+        margin: 50px 0px 0px 0px;
+        padding: 10px;
+    }
+
+    .card_nuno {
+        width: 450px;
+        height: 450px;
+        color: #ffffff;
+        background: url('../imgs/n.jpg') center no-repeat;
+        background-size: cover;
+        border-radius: 20px;
+        overflow: hidden;
+        margin: 50px 0px 0px 0px;
+        padding: 10px;
+    }
+
+    .card_tiago {
+        width: 450px;
+        height: 450px;
+        color: #ffffff;
+        background: url('../imgs/tiago.png') center no-repeat;
+        background-size: cover;
+        border-radius: 20px;
+        overflow: hidden;
+        margin: 50px 0px 0px 0px;
+        padding: 10px;
+    }
+
+
+    #about_target {
+        color: white;
+        font-family: 'Adelle Mono', Flex-Bold;
+        font-size: 40px;
+        text-align: center;
+        margin: 80px 0px 0px 0px;
+    }
+    
+    #about_color{
+        background-color: #9051a2;
+    }
+
+
+    #about_title {
+        color: white;
+        font-family: 'Adelle Mono', Flex-Bold;
+        font-size: 100px;
+        text-align: center;
+        margin: 40px 0px 0px 0px;
+    }
+
+    #important {
+        font-family: 'Adelle Mono', Flex-Bold;
+        text-align: center;
+        color: #ffffff;
+        font-size: 40px;
+        margin: 80px 0px 0px 0px;
+    }
+
+    #missing {
+        font-family: 'Adelle Mono', Flex-Bold;
+        text-align: center;
+        color: #ffffff;
+        font-size: 40px;
+        margin: 80px 0px 0px 0px;
+    }
+    
+    #piece {
+        width: 40%;
+        margin: 0px 0px 0px 500px;
+    }
+
+    #methods_target {
+        font-family: 'Adelle Mono', Flex-Bold;
+        color: white;
+        font-size: 40px;
+        text-align: center;
+        margin: 0px 0px 0px 0px;
+    }
+
+    #video {
+        margin: 0px 0px 0px 500px;
+        height: 500px;
+        width: 800px;
+    }
+
+    #methods_color {
+        background-color: #674ba2;
+    }
+
+
+    #methods_title {
+        font-family: 'Adelle Mono', Flex-Bold;
+        color: white;
+        font-size: 50px;
+        text-align: center;
+        margin: 80px 0px 0px 0px;
+    }
+
+
+    #videos_title{
+        font-family: 'Adelle Mono', Flex-Bold;
+        color: white;
+        font-size: 60px;
+        text-align: center;
+        margin: 80px 0px 0px 0px;
+    }
+
+    #practice_title {
+        font-family: 'Adelle Mono', Flex-Bold;
+        color: white;
+        font-size: 60px;
+        text-align: center;
+        margin: 80px 0px 0px 0px;
+    }
+
+    #learn {
+        font-family: 'Adelle Mono', Flex-Bold;
+        color: white;
+        font-size: 40px;
+        text-align: center;
+        margin: 80px 0px 0px 0px;
+    }
+
+    #courses_title {
+        font-family: 'Adelle Mono', Flex-Bold;
+        color: white;
+        font-size: 40px;
+        text-align: center;
+        margin: 80px 0px 0px 0px;
+    }
+
+    h2{
+        font-family: 'Adelle Mono', Flex-Bold;
+        color: white;
+        font-size: 20px;
+        text-align: center;
+        margin: 80px 0px 0px 0px;
+    }
+
+    #courses_target {
+        font-family: 'Adelle Mono', Flex-Bold;
+        color: white;
+        font-size: 25px;
+        text-align: center;
+        margin: 80px 0px 0px 0px;
+    }
+
+    #courses_color {
+        background-color: #4b48a3
+    }
+
+    #courses_title {
+        font-family: 'Adelle Mono', Flex-Bold;
+        color: white;
+        font-size: 50px;
+        text-align: center;
+        margin: 80px 0px 0px 0px;
+    }
+
+
+    .courses_target {
+        font-family: 'Adelle Mono', Flex-Bold;
+        color: white;
+        font-size: 60px;
+        text-align: center;
+        margin: 0px 0px 0px 0px;
+    }
+
+    #dot_up {
+        height: 55px;
+        width: 55px;
+        background-color: #ffffff;
+        border-radius: 50%;
+        display: inline-block;
+        margin: 80px 0px 60px 1400px;
+    }
+
+    #go_up {
+        width: 60%;
+        margin: 10px 10px 0px 9px;
+        display: block;
+    }
+
+    .card_course {
+        position: relative;
+        width: 450px;
+        height: 450px;
+        margin: 0px 0px 0px 700px;
+        background:
+            linear-gradient(43deg, #f45ea0 0%, #9051a2 46%, #4b48a3 100%);
+        background-size: cover;
+        border-radius: 20px;
+        overflow: hidden;
+    }
+
+    .card_content_course {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height:80%;
+        padding: 20px;
+        background-color: #ffff;
+        border-top-left-radius: 20px;
+        transform: translateY(190px);
+        transition: transform .25s;
+    }
+
+    .card_content_course::before {
+        content: "";
+        position: absolute;
+        top: -47px;
+        right: -45px;
+        width: 100px;
+        height: 100px;
+        transform: rotate(-175deg);
+        border-radius: 50%;
+        box-shadow: inset 48px 48px #fff;
+    }
+
+    .card_title_course {
+        color: #2943a3;
+        line-height:15px;
+        font-size: 40px;
+    }
+
+    .card_description_course {
+        font-size: 14px;
+        opacity: 0;
+        transition: opacity .5s;
+    }
+
+    .card_course:hover .card_content_course {
+        transform: translateY(0);
+    }
+
+    .card_course:hover .card_description_course {
+        opacity: 1;
+        transition-delay: .25s;
+    }
+
+
+
+
+
+
 }
